# blackboards

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  design.md  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: cargo-build.yml  cargo-fmt.yml  cargo-test.yml  ci.yml  release.yml  rust.yml
database/: .gitignore  schema.sql  sessions.sql
migrations/: 20210812083708_initial.sql  20210916163820_sensible-defaults.sql  20210919072647_remove-remaining-in-sessions.sql  20220228180913_elections-2022.sql  20220301073315_ron-nominations.sql
src/: api.rs  auth.rs  context.rs  email.rs  forms.rs  frontend.rs  guards.rs  lib.rs  main.rs  persistence.rs  schema.rs  session_window.rs
src/schema/: attendance.rs  auth_pair.rs  candidate.rs  custom_types.rs  exec_position.rs  mod.rs  nomination.rs  personal_best.rs  registration.rs  request.rs  session.rs  taskmaster_entry.rs  verified_email.rs  vote.rs
templates/: attendance.html.tera  authenticated.html.tera  base.html.tera  blackboard.html.tera  bookings.html.tera  election_results.html.tera  election_settings.html.tera  election_voting.html.tera  elections.html.tera  forbidden.html.tera  navbar.html.tera  personal_bests.html.tera  sessions.html.tera  sessions_manage.html.tera  taskmaster_edit.html.tera  taskmaster_leaderboard.html.tera
tests/: basic.rs
tests/integration/: main.rs  personal_bests.rs  sessions.rs
