[package]
name = "blackboards"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_derive = "1.0.133"
dotenv = "0.15.0"
rand = "0.8.4"
chrono = "0.4.19"
url = "2.2.2"
itertools = "0.10.3"
either = "1.6.1"
base64 = "0.13.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["secrets"]

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["tera"]

[dependencies.rocket_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.5.10"
features = ["chrono", "json", "macros", "offline", "postgres", "runtime-tokio-rustls", "uuid"]

[dependencies.lettre]
version = "0.10.0-rc.4"
default-features = false
features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"]

[dependencies.oauth]
version = "0.5.1"
package = "oauth1-request"

[dependencies.reqwest]
version = "0.11.8"
default-features = false
features = ["rustls-tls"]

[dependencies.tallystick]
git = "https://github.com/alexander-jackson/tallystick"
branch = "stable-compiler"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
uuid = { version = "0.8.2", features = ["v4"] }
