[package]
name = "blackboards"
version = "0.1.0"
authors = ["Alexander Jackson <alexanderjackson@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.159", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
chrono = "0.4.24"
url = "2.3.1"
itertools = "0.10.5"
either = "1.8.1"
base64 = "0.13.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-cookies = { version = "0.9.0", features = ["private"] }
axum-flash = "0.6.0"
tera = "1.18.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
testing = { version = "0.1.0", path = "../testing" }

[dependencies.sqlx]
version = "0.5.13"
features = ["chrono", "json", "macros", "offline", "postgres", "runtime-tokio-rustls", "uuid"]

[dependencies.lettre]
version = "0.10.4"
default-features = false
features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"]

[dependencies.oauth]
version = "0.5.1"
package = "oauth1-request"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["rustls-tls"]

[dependencies.tallystick]
git = "https://github.com/alexander-jackson/tallystick"
branch = "stable-compiler"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["rt", "macros"] }
uuid = { version = "0.8.2", features = ["v4"] }
